# alex

./: AGENTS.md
backend/api/: main.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  observability.py  pyproject.toml
backend/database/src/: models.py
backend/planner/: agent.py  lambda_handler.py  observability.py  prices.py  pyproject.toml
backend/reporter/: agent.py  circuit_breaker.py  lambda_handler.py  observability.py  pyproject.toml
backend/retirement/: agent.py  lambda_handler.py  observability.py  pyproject.toml
backend/shared/: pyproject.toml
backend/shared/shared/: __init__.py  observability.py  portfolio.py
backend/tagger/: observability.py  pyproject.toml
frontend/lib/: api.ts  useJobWebSocket.ts
frontend/pages/: accounts.tsx  advisor-team.tsx  analysis.tsx  dashboard.tsx
frontend/pages/accounts/: [id].tsx
guides/: system_architecture_diagram.md
