[project]
name = "alex-shared"
version = "0.1.0"
description = "Shared utilities for Alex agents (observability, portfolio calculations)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
